fix folder name tech issue

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./Assets/CSS/style.css">
     <!-- Changed the title from "website" to "Horiseon Social..." to be more specific and make the website accessible. -->
     <title>Horiseon Social Solution Services, Inc.</title>
 </head>
